--- a/mysite/home/templates/home/profile.html
+++ b/mysite/home/templates/home/profile.html
@@ -71,7 +71,7 @@
     <div class="col-sm-8 text-left"> 
       <h1>Login Success </h1>
     <p>
-        <h3>Welcome {{ Username }} </h3>
+        <h3>Welcome {{ user.username }} </h3>
 
     </p>
     </div>
