--- a/mysite/home/templates/home/profile.html
+++ b/mysite/home/templates/home/profile.html
@@ -79,10 +79,10 @@
         <h2>New post</h2>
         {% csrf_token %}
         Post Title:<br>
-        <input type="text" name="title">
+        <input type="text" name="Title">
         <br>
         Post Description:<br>
-        <input type="text" name="description">
+        <input type="text" name="Description">
         <br>
         <input type="submit" value="Post!">
       </form>  
