--- a/mysite/home/templates/home/postFeed.html
+++ b/mysite/home/templates/home/postFeed.html
@@ -58,7 +58,7 @@
         <li class="active"><a href="#">Home</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
       </ul>
     </div>
   </div>
@@ -77,7 +77,7 @@
     <a href="{% url 'home:postFeed'%}"></a>
     <a href="{% url 'home:postFeed'%}"></a>
     <p>
-        <table class="table table-bordered table-dark">
+        <table class="table table-sm table-dark">
             <thead>
               <tr>
                 <th scope="col">Title</th>
