--- a/mysite/home/templates/home/postFeed.html
+++ b/mysite/home/templates/home/postFeed.html
@@ -89,13 +89,12 @@
               <tr>
                 <td>{{ post.title }} </td>
                 <td>{{ post.description }}</td>
-                <td> <a href="{% url 'home:specificPost' post.id %}"> 
-                  <div style= "height:100%;width:100%" >
-                  View Post
-                  </div> </a></td>
+                <td><img src="{{ post.image }}"width="200" height="200"></td>
+                <td> <input type="submit" value="View Post"></td>
               </tr>
     </p>
     {% endfor %}
+    
 
     <p>
       
