--- a/mysite/home/templates/home/profile.html
+++ b/mysite/home/templates/home/profile.html
@@ -75,7 +75,7 @@
     </p>
     <p>
       {% block content %}
-      <form action="{% url 'home:makePost' %}" method="post" style="text-align:center;" enctype="multipart/form-data">
+      <form action="{% url 'home:makePost' %}" method="post" style="text-align:left;" enctype="multipart/form-data">
         <h2>New post</h2>
         <br>
         {% csrf_token %}
@@ -88,7 +88,7 @@
         <br>
         <br>
         Image: <br>
-        <input type = "file" name="Image">
+        <input type = "file" name="image">
         <br>
         <br>
         <br>
