--- a/mysite/home/templates/home/postFeed.html
+++ b/mysite/home/templates/home/postFeed.html
@@ -90,7 +90,7 @@
                 <td>{{ post.title }} </td>
                 <td>{{ post.description }}</td>
                 <td><img src="{{ post.image }}"width="200" height="200"></td>
-                <td> <input type="submit" value="View Post"></td>
+                <td> <a href="{% url 'home:viewPost' %}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">View Post!</a></td>
               </tr>
     </p>
     {% endfor %}
