--- a/mysite/home/templates/home/viewPost.html
+++ b/mysite/home/templates/home/viewPost.html
@@ -89,7 +89,7 @@
               <tr>
                 <td>{{ post.title }} </td>
                 <td>{{ post.description }}</td>
-                <td><img src="{{ post.image }}"width="200" height="200"></td>
+                <td><img src="{{ post.image.url }}"width="200" height="200"></td>
               </tr>
     </p>
 
