--- a/mysite/home/templates/home/viewPost.html
+++ b/mysite/home/templates/home/viewPost.html
@@ -58,7 +58,7 @@
         <li class="active"><a href="#">Home</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
+        <li><a href="{% url 'home:logout_view' %}"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
       </ul>
     </div>
   </div>
